crates/squawk_parser/src/snapshots/parser__test__alter_event_trigger_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/alter_event_trigger.sql
---
SOURCE_FILE
  COMMENT "-- disable"
  WHITESPACE "\n"
  ALTER_EVENT_TRIGGER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    EVENT_KW "event"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    NAME_REF
      IDENT "t"
    WHITESPACE " "
    DISABLE_KW "disable"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- enable"
  WHITESPACE "\n"
  ALTER_EVENT_TRIGGER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    EVENT_KW "event"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    NAME_REF
      IDENT "t"
    WHITESPACE " "
    ENABLE_KW "enable"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- enable_replica"
  WHITESPACE "\n"
  ALTER_EVENT_TRIGGER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    EVENT_KW "event"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    NAME_REF
      IDENT "t"
    WHITESPACE " "
    ENABLE_KW "enable"
    WHITESPACE " "
    REPLICA_KW "replica"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- enable_always"
  WHITESPACE "\n"
  ALTER_EVENT_TRIGGER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    EVENT_KW "event"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    NAME_REF
      IDENT "t"
    WHITESPACE " "
    ENABLE_KW "enable"
    WHITESPACE " "
    ALWAYS_KW "always"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_EVENT_TRIGGER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    EVENT_KW "event"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    NAME_REF
      IDENT "t"
    WHITESPACE " "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner_current_role"
  WHITESPACE "\n"
  ALTER_EVENT_TRIGGER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    EVENT_KW "event"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    NAME_REF
      IDENT "t"
    WHITESPACE " "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    CURRENT_ROLE_KW "current_role"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_EVENT_TRIGGER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    EVENT_KW "event"
    WHITESPACE " "
    TRIGGER_KW "trigger"
    WHITESPACE " "
    NAME_REF
      IDENT "t"
    WHITESPACE " "
    RENAME_KW "rename"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    NAME
      IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n\n"
