crates/squawk_parser/src/snapshots/parser__test__alter_foreign_data_wrapper_err.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/err/alter_foreign_data_wrapper.sql
---
SOURCE_FILE
  COMMENT "-- missing option"
  WHITESPACE "\n"
  ALTER_FOREIGN_DATA_WRAPPER_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    FOREIGN_KW "foreign"
    WHITESPACE " "
    DATA_KW "data"
    WHITESPACE " "
    WRAPPER_KW "wrapper"
    WHITESPACE " "
    NAME_REF
      IDENT "w"
  SEMICOLON ";"
  WHITESPACE "\n"
---
ERROR@46: Missing alter foreign data wrapper option or action.
