crates/squawk_parser/src/snapshots/parser__test__alter_group_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/alter_group.sql
---
SOURCE_FILE
  COMMENT "-- add"
  WHITESPACE "\n"
  ALTER_GROUP_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IDENT "g"
    WHITESPACE " "
    ADD_KW "add"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    NAME_REF
      IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- add_multiple"
  WHITESPACE "\n"
  ALTER_GROUP_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IDENT "g"
    WHITESPACE " "
    ADD_KW "add"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    NAME_REF
      IDENT "u"
    COMMA ","
    WHITESPACE " "
    NAME_REF
      IDENT "v"
    COMMA ","
    WHITESPACE " "
    NAME_REF
      IDENT "w"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- drop"
  WHITESPACE "\n"
  ALTER_GROUP_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IDENT "g"
    WHITESPACE " "
    DROP_KW "drop"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    NAME_REF
      IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- drop_multiple"
  WHITESPACE "\n"
  ALTER_GROUP_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IDENT "g"
    WHITESPACE " "
    DROP_KW "drop"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    NAME_REF
      IDENT "u"
    COMMA ","
    WHITESPACE " "
    NAME_REF
      IDENT "v"
    COMMA ","
    WHITESPACE " "
    NAME_REF
      IDENT "w"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_GROUP_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    IDENT "g"
    WHITESPACE " "
    RENAME_KW "rename"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    NAME
      IDENT "n"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- current_role"
  WHITESPACE "\n"
  ALTER_GROUP_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    CURRENT_ROLE_KW "current_role"
    WHITESPACE " "
    ADD_KW "add"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    NAME_REF
      IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- current_user"
  WHITESPACE "\n"
  ALTER_GROUP_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
    WHITESPACE " "
    DROP_KW "drop"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    NAME_REF
      IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- session_user"
  WHITESPACE "\n"
  ALTER_GROUP_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    GROUP_KW "group"
    WHITESPACE " "
    SESSION_USER_KW "session_user"
    WHITESPACE " "
    ADD_KW "add"
    WHITESPACE " "
    USER_KW "user"
    WHITESPACE " "
    NAME_REF
      IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n\n"
